hreo - add copy && fix structure on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,7 +111,7 @@ body {
   @apply px-4 md:px-8 3xl:px-0;
 }
 .content-max-width {
-  @apply max-w-[85%];
+  @apply max-w-[95%] lg:max-w-[85%];
   @apply mx-auto;
   @apply w-full;
 }
@@ -161,9 +161,13 @@ button:focus,
 }
 
 .hero-glass {
-  box-sizing: border-box;
-  background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+}
+@media screen and (min-width: 1024px) {
+  .hero-glass {
+    box-sizing: border-box;
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(10px);
+  }
 }
 
 .hero-background {
